clusters/dextek/apps/dev/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - git.plexuz.xyz
  parentRefs:
    - name: gateway-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: forgejo-anubis
          port: 8080
      timeouts:
        request: 300s
